feat: Redis 캐시 Adapter 및 Grid 기반 캐시 전략 구현
- RedisConfig JSON 직렬화 설정
- RedisCacheAdapter CachePort 구현 (검색/상세 캐시 TTL 적용)
- GridCacheKeyGenerator 좌표 Grid 스냅 및 3x3 인접 셀 무효화
- SearchService 캐시 조회/저장 로직 통합
- BusinessService 상세 조회 캐시 적용
- 캐시 Hit/Miss 시나리오 단위 테스트 작성